--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "core-js": "^3.8.3",
     "firebase": "^8.2.7",
     "nuxt": "^2.14.12",
+    "nuxt-i18n": "^6.20.2",
+    "vue-country-flag": "^2.0.3",
     "vue-toastification": "^1.7.11"
   },
   "devDependencies": {
