--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.8.3",
     "firebase": "^8.2.7",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.12",
     "nuxt-i18n": "^6.20.2",
     "vue-country-flag": "^2.0.3",
