--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "core-js": "^3.8.3",
     "firebase": "^8.2.7",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.14.12",
+    "nuxt": "^2.15.3",
     "nuxt-i18n": "^6.20.2",
     "vue-country-flag": "^2.0.3",
     "vue-toastification": "^1.7.11"
@@ -36,7 +36,7 @@
     "@nuxt/typescript-build": "^2.0.4",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^3.4.2",
+    "@nuxtjs/tailwindcss": "^4.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-plugin-nuxt": "^2.0.0",
@@ -45,6 +45,7 @@
     "node-sass": "^5.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-purgecss": "^1.0.0",
+    "postcss": "^8.2.8",
     "sass-loader": "^10.1.1"
   }
 }
