--- a/package.json
+++ b/package.json
@@ -4,44 +4,43 @@
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "emulators": "firebase emulators:start --import=./fbemulatordata --export-on-exit"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@nuxt/typescript-runtime": "^2.0.1",
-    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
+    "@nuxtjs/auth-next": "5.0.0-1617968180.f699074",
     "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/firebase": "^7.4.1",
+    "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/toast": "^3.3.1",
-    "core-js": "^3.8.3",
-    "firebase": "^8.2.7",
+    "core-js": "^3.10.1",
+    "firebase": "^8.3.3",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.15.3",
-    "nuxt-i18n": "^6.20.2",
-    "vue-country-flag": "^2.0.3",
+    "nuxt": "^2.15.4",
+    "nuxt-i18n": "^6.24.0",
+    "vue-country-flag": "^2.0.4",
     "vue-toastification": "^1.7.11"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.12",
-    "@nuxt/typescript-build": "^2.0.4",
-    "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@nuxt/types": "^2.15.4",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^4.0.1",
+    "@nuxtjs/tailwindcss": "^4.0.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.24.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.5.0",
-    "firebase-admin": "^9.5.0",
+    "eslint-plugin-vue": "^7.8.0",
+    "firebase-admin": "^9.6.0",
     "node-sass": "^5.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-purgecss": "^1.0.0",
-    "postcss": "^8.2.8",
+    "postcss": "^8.2.10",
     "sass-loader": "^10.1.1"
   }
 }
