--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "@nuxtjs/firebase",
       "@types/node",
       "vue-toastification/nuxt",
-      "nuxt-i18n",
+      "nuxt-i18n"
     ]
   },
   "exclude": [
