--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "dev:host": "nuxt --hostname 192.168.1.98 --port 3000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -13,32 +14,31 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@nuxt/types": "^2.15.4",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@nuxt/types": "^2.15.6",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/auth-next": "5.0.0-1622918202.e815752",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^4.0.3",
+    "@nuxtjs/firebase": "^7.6.1",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/tailwindcss": "^4.1.3",
+    "@nuxtjs/toast": "^3.3.1",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.14.0",
     "eslint": "^7.24.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.8.0",
-    "firebase-admin": "^9.6.0",
-    "node-sass": "^5.0.0",
-    "nuxt-fontawesome": "^0.4.0",
-    "nuxt-purgecss": "^1.0.0",
-    "postcss": "^8.2.10",
-    "sass-loader": "^10.1.1",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@nuxtjs/auth-next": "5.0.0-1617968180.f699074",
-    "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/firebase": "^7.5.0",
-    "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/toast": "^3.3.1",
-    "core-js": "^3.10.1",
-    "firebase": "^8.3.3",
+    "firebase": "^8.6.7",
+    "firebase-admin": "^9.9.0",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.15.4",
-    "nuxt-i18n": "^6.24.0",
+    "node-sass": "^6.0.0",
+    "nuxt": "^2.15.6",
+    "nuxt-i18n": "^6.27.0",
+    "nuxt-purgecss": "^1.0.0",
+    "postcss": "^8.3.2",
+    "sass-loader": "^10.2.0",
     "vue-country-flag": "^2.0.4",
     "vue-toastification": "^1.7.11"
   }
